--- a/devbooks-adapter/pom.xml
+++ b/devbooks-adapter/pom.xml
@@ -43,9 +43,9 @@
             <version>4.29.2</version>
         </dependency>
         <dependency>
-            <groupId>io.swagger.parser.v3</groupId>
-            <artifactId>swagger-parser</artifactId>
-            <version>2.1.20</version>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.5.2.Final</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
