--- a/devbooks-adapter/pom.xml
+++ b/devbooks-adapter/pom.xml
@@ -34,6 +34,11 @@
             <version>0.2.6</version>
         </dependency>
         <dependency>
+            <groupId>io.swagger.parser.v3</groupId>
+            <artifactId>swagger-parser</artifactId>
+            <version>2.1.20</version>
+        </dependency>
+        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
